# vizor_ai_frs

./: .env.example  .env.prod  .env.shared  .env.shared.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.shared.yml  docker-compose.yml  sync-platform.sh
backend/: .env.example  Dockerfile  Dockerfile.prod  GPU-SETUP.md  pyproject.toml
backend/app/: enroll.py  events.py  gallery.py  licensing_gate.py  live.py  main.py  registry.py  reports.py  retention.py  scheduler.py  settings_store.py  stream_supervisor.py  transit_engine.py
backend/app/api/: __init__.py  _scope.py  cameras.py  events.py  groups.py  ingest.py  investigate.py  live.py  persons.py  photos.py  public.py  reports.py  schemas.py  settings.py  transit.py  tts.py
backend/app/domain/: models.py  permissions.py
backend/app/recognition/: __init__.py  faceengine.py  preprocess.py  triton_engine.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_frs_baseline.py  0002_branding_name_in_header.py  0002_edge_settings.py  0003_frs_recognition_settings.py  0003_user_email_verified.py  0004_frs_per_camera_params.py  0004_user_avatar.py  0005_account_prefs_sessions.py  0005_frs_transit_attendance.py  0006_app_settings.py  0006_frs_analyze_width.py  0007_frs_domain.py  0007_settings_table.py  0008_frs_poi_face.py  0009_account_security.py  0010_totp_mfa.py  (+10 more)
backend/models/: README.md
backend/tests/: conftest.py  test_attendance.py  test_cfg_sig.py  test_fairface.py  test_reports.py  test_roi.py  test_transit_engine.py
backend/tools/: PAD-MODEL.md  fetch_models.py
(+46 files in other folders)
